Fix socials alignment in footer

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -90,6 +90,7 @@
       
       &_socials {
         grid-row: 3;
+        justify-content: flex-start;
       }
       &_links {
         flex-direction: row;
